# Editz

./: @CONTEXT.MD  ABOUT_ME.md  README.md  build.gradle.kts  gradle.properties  keystore.properties  settings.gradle.kts
app/: CMakeLists.txt  build.gradle.kts
app/src/androidTest/java/com/rajit/editz/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/editz/: EditzApplication.kt
app/src/main/java/com/editz/data/: VideoDetails.kt
app/src/main/java/com/editz/data/manager/: VideoSaveManager.kt
app/src/main/java/com/editz/data/model/: Project.kt
app/src/main/java/com/editz/theme/: Color.kt  Theme.kt
app/src/main/java/com/editz/ui/create/: CreateVideoScreen.kt  CreateVideoViewModel.kt
app/src/main/java/com/editz/ui/editor/: VideoEditorScreen.kt  VideoEditorViewModel.kt
app/src/main/java/com/editz/ui/editor/components/: VideoAdjustments.kt  VideoAdvancedControls.kt  VideoEffects.kt  VideoFilter.kt  VideoFilters.kt  VideoTimeline.kt  VideoTrimSlider.kt  (+1 more)
app/src/main/java/com/editz/ui/home/: HomeActivity.kt  HomeViewModel.kt
app/src/main/java/com/editz/ui/preview/: VideoPreviewScreen.kt  VideoPreviewState.kt  VideoPreviewViewModel.kt
app/src/main/java/com/editz/util/: PermissionChecker.kt  package-info.java
app/src/main/java/com/editz/utils/: EditorStateManager.kt  PermissionHandler.kt  ThumbnailGenerator.kt  VideoPickerHandler.kt  VideoProcessor.kt
app/src/main/java/com/rajit/editz/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/rajit/editz/: ExampleUnitTest.kt
(+34 files in other folders)
