cmake_minimum_required(VERSION 3.22.1)
project(editz)

# Set C++ standard
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# Add your native source files here
# add_library(native-lib SHARED
#     src/main/cpp/native-lib.cpp
# )

# Link libraries
# target_link_libraries(native-lib
#     android
#     log
# ) 